@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-15T00:31:28Z",
-  "count_outdated" : 1387,
-  "uniques_outdated" : 335,
+  "timestamp" : "2023-08-15T08:08:57Z",
+  "count_outdated" : 1398,
+  "uniques_outdated" : 337,
   "count" : 1486,
   "uniques" : 348,
   "views" : [
-    {
-      "timestamp": "2023-08-01T00:00:00Z",
-      "count": 11,
-      "count_minmax": [ 11, 11 ],
-      "count_decinc": [ 0, 11 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2023-08-04T00:00:00Z",
       "count": 11,
