@@ -1,12 +1,7 @@
 {
-  "count": 99,
-  "uniques": 13,
+  "count": 88,
+  "uniques": 11,
   "views": [
-    {
-      "timestamp": "2023-08-01T00:00:00Z",
-      "count": 11,
-      "uniques": 2
-    },
     {
       "timestamp": "2023-08-04T00:00:00Z",
       "count": 11,
