@@ -1,3 +1,12 @@
+2023-08-15T08:08:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5865001011 # 1819
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-15
+* notice: last 14d: unq all: 11 88
+* notice: prev accum: outdated-unq outdated-all / unq all: 335 1387 / 348 1486
+* notice: next accum: outdated-unq outdated-all / unq all: 337 1398 / 348 1486
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-08-01] / []
+
 2023-08-15T00:31:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5862137880 # 1818
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-15
